--- a/LicentaApp/Web.config
+++ b/LicentaApp/Web.config
@@ -21,14 +21,13 @@
     </authentication>
     <membership defaultProvider="AppMembershipProvider">
       <providers>
-        <clear/>
-        <add name="AppMembershipProvider"
-             type="LicentaApp.Domain.Auth.AppMembershipProvider"/>
+        <clear />
+        <add name="AppMembershipProvider" type="LicentaApp.Domain.Auth.AppMembershipProvider" />
       </providers>
     </membership>
     <roleManager defaultProvider="AppRoleProvider" enabled="true">
       <providers>
-        <clear/>
+        <clear />
         <add name="AppRoleProvider" type="LicentaApp.Domain.Auth.AppRoleProvider" />
       </providers>
     </roleManager>
@@ -63,7 +62,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <publisherPolicy apply="no" />
@@ -84,6 +83,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp from="licenta.stroe2018@gmail.com">
+        <network host="smtp.gmail.com" port="587" userName="licenta.stroe2018@gmail.com" password="teodora01!" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
