--- a/LicentaApp/packages.config
+++ b/LicentaApp/packages.config
@@ -26,6 +26,10 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.2.1100" targetFramework="net452" />
+  <package id="RazorEngine" version="3.9.3" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net452" />
+  <package id="Rotativa.Core" version="2.0.0" targetFramework="net452" />
+  <package id="Rotativa.MVC" version="2.0.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
