--- a/LicentaApp/LicentaApp.csproj
+++ b/LicentaApp/LicentaApp.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Domain\Email\PrintService.cs" />
     <Compile Include="Domain\EnumHelper.cs" />
     <Compile Include="Domain\Extensions.cs" />
+    <Compile Include="Domain\Filters\UserFilterService.cs" />
     <Compile Include="Domain\Metadata\ProductCache.cs" />
     <Compile Include="Domain\Metadata\ProductMetadata.cs" />
     <Compile Include="Domain\Metadata\ProductProperties.cs" />
